a solution to tsoa dynamicish naming
